oprule/lib/parser/op_rule.output
Terminals which are not used

   NEG


Grammar

    0 $accept: line $end

    1 line: NAME ASSIGN boolexpression ';'
    2     | NAME ASSIGN expression ';'
    3     | boolexpression ';'
    4     | expression ';'
    5     | NAME ASSIGN oprule ';'
    6     | oprule ';'
    7     | reassignment
    8     | error ';'

    9 reassignment: boolexpression ASSIGN
   10             | expression ASSIGN

   11 oprule: action triggerexpression

   12 triggerexpression: WHEN boolexpression

   13 action: modelaction
   14       | action THEN action
   15       | action WHILE action
   16       | '(' action ')'

   17 modelaction: actionspec targetspec transitionspec
   18            | actionspec targetspec

   19 actionspec: SET interface

   20 targetspec: TO expression

   21 transitionspec: RAMP NUMBER MIN

   22 term: NUMBER
   23     | unary
   24     | date
   25     | namedval
   26     | laggedval

   27 boolterm: '(' boolexpression ')'
   28         | FALSE
   29         | TRUE
   30         | namedboolval

   31 unary: SQRT '(' expression ')'
   32      | LOG '(' expression ')'
   33      | LN '(' expression ')'
   34      | EXP '(' expression ')'

   35 expression: term
   36           | expression '^' expression
   37           | expression '*' expression
   38           | expression '/' expression
   39           | expression '+' expression
   40           | expression '-' expression
   41           | '-' expression
   42           | '(' expression ')'
   43           | IFELSE '(' boolexpression ',' expression ',' expression ')'
   44           | ACCUMULATE '(' expression ',' expression ',' boolexpression ')'
   45           | ACCUMULATE '(' expression ',' expression ')'
   46           | PREDICT '(' expression ',' LINEAR ',' NUMBER MIN ')'
   47           | PREDICT '(' expression ',' QUAD ',' NUMBER MIN ')'
   48           | MIN2 '(' expression ',' expression ')'
   49           | MAX2 '(' expression ',' expression ')'
   50           | MIN3 '(' expression ',' expression ',' expression ')'
   51           | MAX3 '(' expression ',' expression ',' expression ')'

   52 boolexpression: boolterm
   53               | expression LE expression
   54               | expression GE expression
   55               | expression GT expression
   56               | expression LT expression
   57               | expression EQ expression
   58               | expression NE expression
   59               | boolexpression OR boolexpression
   60               | boolexpression AND boolexpression
   61               | NOT boolexpression

   62 laggedval: NAME '(' 't' '-' NUMBER ')'

   63 arglist: arg
   64        | arglist ',' arg
   65        | arglist ';' arg

   66 arg: NAME DEFINE NUMBER
   67    | NAME DEFINE QUOTEDSTRING
   68    | NAME DEFINE NAME

   69 date: DATETIME
   70     | REFDATE REFTIME
   71     | REFDATE
   72     | SEASON
   73     | REFSEASON REFTIME
   74     | REFSEASON
   75     | YEAR
   76     | MONTH
   77     | DAY
   78     | HOUR
   79     | MINDAY
   80     | MIN

   81 interface: IFPARAM '(' arglist ')'
   82          | IFNAME

   83 namedval: NAMEDVAL
   84         | EXPRESSPARAM '(' arglist ')'
   85         | EXPRESS
   86         | interface

   87 namedboolval: BOOLNAMEDVAL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 16 27 31 32 33 34 42 43 44 45 46 47 48 49 50 51 62 81 84
')' (41) 16 27 31 32 33 34 42 43 44 45 46 47 48 49 50 51 62 81 84
'*' (42) 37
'+' (43) 39
',' (44) 43 44 45 46 47 48 49 50 51 64
'-' (45) 40 41 62
'/' (47) 38
';' (59) 1 2 3 4 5 6 8 65
'^' (94) 36
't' (116) 62
error (256) 8
NAME (258) 1 2 5 62 66 67 68
IFNAME (259) 82
IFPARAM (260) 81
EXPRESS (261) 85
EXPRESSPARAM (262) 84
NAMEDVAL (263) 83
BOOLNAMEDVAL (264) 87
LT (265) 56
LE (266) 53
GT (267) 55
GE (268) 54
EQ (269) 57
NE (270) 58
MAX2 (271) 49
MIN2 (272) 48
MAX3 (273) 51
MIN3 (274) 50
IFELSE (275) 43
ACCUMULATE (276) 44 45
PREDICT (277) 46 47
LINEAR (278) 46
QUAD (279) 47
SQRT (280) 31
LOG (281) 32
LN (282) 33
EXP (283) 34
SET (284) 19
TO (285) 20
WHEN (286) 12
WHILE (287) 15
THEN (288) 14
RAMP (289) 21
YEAR (290) 75
MONTH (291) 76
DAY (292) 77
HOUR (293) 78
MINDAY (294) 79
MIN (295) 21 46 47 80
SEASON (296) 72
DATETIME (297) 69
REFDATE (298) 70 71
REFTIME (299) 70 73
REFSEASON (300) 73 74
NUMBER (301) 21 22 46 47 62 66
QUOTEDSTRING (302) 67
ASSIGN (303) 1 2 5 9 10
FALSE (304) 28
TRUE (305) 29
OR (306) 59
AND (307) 60
NOT (308) 61
DEFINE (309) 66 67 68
NEG (310)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
line (67)
    on left: 1 2 3 4 5 6 7 8, on right: 0
reassignment (68)
    on left: 9 10, on right: 7
oprule (69)
    on left: 11, on right: 5 6
triggerexpression (70)
    on left: 12, on right: 11
action (71)
    on left: 13 14 15 16, on right: 11 14 15 16
modelaction (72)
    on left: 17 18, on right: 13
actionspec (73)
    on left: 19, on right: 17 18
targetspec (74)
    on left: 20, on right: 17 18
transitionspec (75)
    on left: 21, on right: 17
term (76)
    on left: 22 23 24 25 26, on right: 35
boolterm (77)
    on left: 27 28 29 30, on right: 52
unary (78)
    on left: 31 32 33 34, on right: 23
expression (79)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51,
    on right: 2 4 10 20 31 32 33 34 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 53 54 55 56 57 58
boolexpression (80)
    on left: 52 53 54 55 56 57 58 59 60 61, on right: 1 3 9 12 27 43
    44 59 60 61
laggedval (81)
    on left: 62, on right: 26
arglist (82)
    on left: 63 64 65, on right: 64 65 81 84
arg (83)
    on left: 66 67 68, on right: 63 64 65
date (84)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80, on right: 24
interface (85)
    on left: 81 82, on right: 19 86
namedval (86)
    on left: 83 84 85 86, on right: 25
namedboolval (87)
    on left: 87, on right: 30


state 0

    0 $accept: . line $end

    error         shift, and go to state 1
    NAME          shift, and go to state 2
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    SET           shift, and go to state 20
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    FALSE         shift, and go to state 32
    TRUE          shift, and go to state 33
    NOT           shift, and go to state 34
    '-'           shift, and go to state 35
    '('           shift, and go to state 36

    line            go to state 37
    reassignment    go to state 38
    oprule          go to state 39
    action          go to state 40
    modelaction     go to state 41
    actionspec      go to state 42
    term            go to state 43
    boolterm        go to state 44
    unary           go to state 45
    expression      go to state 46
    boolexpression  go to state 47
    laggedval       go to state 48
    date            go to state 49
    interface       go to state 50
    namedval        go to state 51
    namedboolval    go to state 52


state 1

    8 line: error . ';'

    ';'  shift, and go to state 53


state 2

    1 line: NAME . ASSIGN boolexpression ';'
    2     | NAME . ASSIGN expression ';'
    5     | NAME . ASSIGN oprule ';'
   62 laggedval: NAME . '(' 't' '-' NUMBER ')'

    ASSIGN  shift, and go to state 54
    '('     shift, and go to state 55


state 3

   82 interface: IFNAME .

    $default  reduce using rule 82 (interface)


state 4

   81 interface: IFPARAM . '(' arglist ')'

    '('  shift, and go to state 56


state 5

   85 namedval: EXPRESS .

    $default  reduce using rule 85 (namedval)


state 6

   84 namedval: EXPRESSPARAM . '(' arglist ')'

    '('  shift, and go to state 57


state 7

   83 namedval: NAMEDVAL .

    $default  reduce using rule 83 (namedval)


state 8

   87 namedboolval: BOOLNAMEDVAL .

    $default  reduce using rule 87 (namedboolval)


state 9

   49 expression: MAX2 . '(' expression ',' expression ')'

    '('  shift, and go to state 58


state 10

   48 expression: MIN2 . '(' expression ',' expression ')'

    '('  shift, and go to state 59


state 11

   51 expression: MAX3 . '(' expression ',' expression ',' expression ')'

    '('  shift, and go to state 60


state 12

   50 expression: MIN3 . '(' expression ',' expression ',' expression ')'

    '('  shift, and go to state 61


state 13

   43 expression: IFELSE . '(' boolexpression ',' expression ',' expression ')'

    '('  shift, and go to state 62


state 14

   44 expression: ACCUMULATE . '(' expression ',' expression ',' boolexpression ')'
   45           | ACCUMULATE . '(' expression ',' expression ')'

    '('  shift, and go to state 63


state 15

   46 expression: PREDICT . '(' expression ',' LINEAR ',' NUMBER MIN ')'
   47           | PREDICT . '(' expression ',' QUAD ',' NUMBER MIN ')'

    '('  shift, and go to state 64


state 16

   31 unary: SQRT . '(' expression ')'

    '('  shift, and go to state 65


state 17

   32 unary: LOG . '(' expression ')'

    '('  shift, and go to state 66


state 18

   33 unary: LN . '(' expression ')'

    '('  shift, and go to state 67


state 19

   34 unary: EXP . '(' expression ')'

    '('  shift, and go to state 68


state 20

   19 actionspec: SET . interface

    IFNAME   shift, and go to state 3
    IFPARAM  shift, and go to state 4

    interface  go to state 69


state 21

   75 date: YEAR .

    $default  reduce using rule 75 (date)


state 22

   76 date: MONTH .

    $default  reduce using rule 76 (date)


state 23

   77 date: DAY .

    $default  reduce using rule 77 (date)


state 24

   78 date: HOUR .

    $default  reduce using rule 78 (date)


state 25

   79 date: MINDAY .

    $default  reduce using rule 79 (date)


state 26

   80 date: MIN .

    $default  reduce using rule 80 (date)


state 27

   72 date: SEASON .

    $default  reduce using rule 72 (date)


state 28

   69 date: DATETIME .

    $default  reduce using rule 69 (date)


state 29

   70 date: REFDATE . REFTIME
   71     | REFDATE .

    REFTIME  shift, and go to state 70

    $default  reduce using rule 71 (date)


state 30

   73 date: REFSEASON . REFTIME
   74     | REFSEASON .

    REFTIME  shift, and go to state 71

    $default  reduce using rule 74 (date)


state 31

   22 term: NUMBER .

    $default  reduce using rule 22 (term)


state 32

   28 boolterm: FALSE .

    $default  reduce using rule 28 (boolterm)


state 33

   29 boolterm: TRUE .

    $default  reduce using rule 29 (boolterm)


state 34

   61 boolexpression: NOT . boolexpression

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    FALSE         shift, and go to state 32
    TRUE          shift, and go to state 33
    NOT           shift, and go to state 34
    '-'           shift, and go to state 35
    '('           shift, and go to state 73

    term            go to state 43
    boolterm        go to state 44
    unary           go to state 45
    expression      go to state 74
    boolexpression  go to state 75
    laggedval       go to state 48
    date            go to state 49
    interface       go to state 50
    namedval        go to state 51
    namedboolval    go to state 52


state 35

   41 expression: '-' . expression

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 77
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 36

   16 action: '(' . action ')'
   27 boolterm: '(' . boolexpression ')'
   42 expression: '(' . expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    SET           shift, and go to state 20
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    FALSE         shift, and go to state 32
    TRUE          shift, and go to state 33
    NOT           shift, and go to state 34
    '-'           shift, and go to state 35
    '('           shift, and go to state 36

    action          go to state 78
    modelaction     go to state 41
    actionspec      go to state 42
    term            go to state 43
    boolterm        go to state 44
    unary           go to state 45
    expression      go to state 79
    boolexpression  go to state 80
    laggedval       go to state 48
    date            go to state 49
    interface       go to state 50
    namedval        go to state 51
    namedboolval    go to state 52


state 37

    0 $accept: line . $end

    $end  shift, and go to state 81


state 38

    7 line: reassignment .

    $default  reduce using rule 7 (line)


state 39

    6 line: oprule . ';'

    ';'  shift, and go to state 82


state 40

   11 oprule: action . triggerexpression
   14 action: action . THEN action
   15       | action . WHILE action

    WHEN   shift, and go to state 83
    WHILE  shift, and go to state 84
    THEN   shift, and go to state 85

    triggerexpression  go to state 86


state 41

   13 action: modelaction .

    $default  reduce using rule 13 (action)


state 42

   17 modelaction: actionspec . targetspec transitionspec
   18            | actionspec . targetspec

    TO  shift, and go to state 87

    targetspec  go to state 88


state 43

   35 expression: term .

    $default  reduce using rule 35 (expression)


state 44

   52 boolexpression: boolterm .

    $default  reduce using rule 52 (boolexpression)


state 45

   23 term: unary .

    $default  reduce using rule 23 (term)


state 46

    4 line: expression . ';'
   10 reassignment: expression . ASSIGN
   36 expression: expression . '^' expression
   37           | expression . '*' expression
   38           | expression . '/' expression
   39           | expression . '+' expression
   40           | expression . '-' expression
   53 boolexpression: expression . LE expression
   54               | expression . GE expression
   55               | expression . GT expression
   56               | expression . LT expression
   57               | expression . EQ expression
   58               | expression . NE expression

    LT      shift, and go to state 89
    LE      shift, and go to state 90
    GT      shift, and go to state 91
    GE      shift, and go to state 92
    EQ      shift, and go to state 93
    NE      shift, and go to state 94
    ASSIGN  shift, and go to state 95
    '+'     shift, and go to state 96
    '-'     shift, and go to state 97
    '*'     shift, and go to state 98
    '/'     shift, and go to state 99
    '^'     shift, and go to state 100
    ';'     shift, and go to state 101


state 47

    3 line: boolexpression . ';'
    9 reassignment: boolexpression . ASSIGN
   59 boolexpression: boolexpression . OR boolexpression
   60               | boolexpression . AND boolexpression

    ASSIGN  shift, and go to state 102
    OR      shift, and go to state 103
    AND     shift, and go to state 104
    ';'     shift, and go to state 105


state 48

   26 term: laggedval .

    $default  reduce using rule 26 (term)


state 49

   24 term: date .

    $default  reduce using rule 24 (term)


state 50

   86 namedval: interface .

    $default  reduce using rule 86 (namedval)


state 51

   25 term: namedval .

    $default  reduce using rule 25 (term)


state 52

   30 boolterm: namedboolval .

    $default  reduce using rule 30 (boolterm)


state 53

    8 line: error ';' .

    $default  reduce using rule 8 (line)


state 54

    1 line: NAME ASSIGN . boolexpression ';'
    2     | NAME ASSIGN . expression ';'
    5     | NAME ASSIGN . oprule ';'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    SET           shift, and go to state 20
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    FALSE         shift, and go to state 32
    TRUE          shift, and go to state 33
    NOT           shift, and go to state 34
    '-'           shift, and go to state 35
    '('           shift, and go to state 36

    oprule          go to state 106
    action          go to state 40
    modelaction     go to state 41
    actionspec      go to state 42
    term            go to state 43
    boolterm        go to state 44
    unary           go to state 45
    expression      go to state 107
    boolexpression  go to state 108
    laggedval       go to state 48
    date            go to state 49
    interface       go to state 50
    namedval        go to state 51
    namedboolval    go to state 52


state 55

   62 laggedval: NAME '(' . 't' '-' NUMBER ')'

    't'  shift, and go to state 109


state 56

   81 interface: IFPARAM '(' . arglist ')'

    NAME  shift, and go to state 110

    arglist  go to state 111
    arg      go to state 112


state 57

   84 namedval: EXPRESSPARAM '(' . arglist ')'

    NAME  shift, and go to state 110

    arglist  go to state 113
    arg      go to state 112


state 58

   49 expression: MAX2 '(' . expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 114
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 59

   48 expression: MIN2 '(' . expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 115
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 60

   51 expression: MAX3 '(' . expression ',' expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 116
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 61

   50 expression: MIN3 '(' . expression ',' expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 117
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 62

   43 expression: IFELSE '(' . boolexpression ',' expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    BOOLNAMEDVAL  shift, and go to state 8
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    FALSE         shift, and go to state 32
    TRUE          shift, and go to state 33
    NOT           shift, and go to state 34
    '-'           shift, and go to state 35
    '('           shift, and go to state 73

    term            go to state 43
    boolterm        go to state 44
    unary           go to state 45
    expression      go to state 74
    boolexpression  go to state 118
    laggedval       go to state 48
    date            go to state 49
    interface       go to state 50
    namedval        go to state 51
    namedboolval    go to state 52


state 63

   44 expression: ACCUMULATE '(' . expression ',' expression ',' boolexpression ')'
   45           | ACCUMULATE '(' . expression ',' expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 119
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 64

   46 expression: PREDICT '(' . expression ',' LINEAR ',' NUMBER MIN ')'
   47           | PREDICT '(' . expression ',' QUAD ',' NUMBER MIN ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 120
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 65

   31 unary: SQRT '(' . expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 121
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 66

   32 unary: LOG '(' . expression ')'

    NAME          shift, and go to state 72
    IFNAME        shift, and go to state 3
    IFPARAM       shift, and go to state 4
    EXPRESS       shift, and go to state 5
    EXPRESSPARAM  shift, and go to state 6
    NAMEDVAL      shift, and go to state 7
    MAX2          shift, and go to state 9
    MIN2          shift, and go to state 10
    MAX3          shift, and go to state 11
    MIN3          shift, and go to state 12
    IFELSE        shift, and go to state 13
    ACCUMULATE    shift, and go to state 14
    PREDICT       shift, and go to state 15
    SQRT          shift, and go to state 16
    LOG           shift, and go to state 17
    LN            shift, and go to state 18
    EXP           shift, and go to state 19
    YEAR          shift, and go to state 21
    MONTH         shift, and go to state 22
    DAY           shift, and go to state 23
    HOUR          shift, and go to state 24
    MINDAY        shift, and go to state 25
    MIN           shift, and go to state 26
    SEASON        shift, and go to state 27
    DATETIME      shift, and go to state 28
    REFDATE       shift, and go to state 29
    REFSEASON     shift, and go to state 30
    NUMBER        shift, and go to state 31
    '-'           shift, and go to state 35
    '('           shift, and go to state 76

    term        go to state 43
    unary       go to state 45
    expression  go to state 122
    laggedval   go to state 48
    date        go to state 49
    interface   go to state 50
    namedval    go to state 51


state 67
